using valueOf() when possible